baby, baby ohhh

--- a/o_nas.html
+++ b/o_nas.html
@@ -31,8 +31,6 @@
                 <li><a href="kontakt.html">KONTAKT</a></li>
             </menu>
         </nav>
-
-
     </header>
 <main>
     <section>
@@ -54,11 +52,11 @@
     </article>
     </section>
 </main>
-<footer>
-    <p>Plácneme si na váš projekt</p>
-    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
-    <button class="button__footer">Nezávazně poptat</button>
-</footer>
+    <footer>
+        <p class="velky_a_tucny">Plácneme si na váš projekt</p>
+        <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+        <button onclick="window.location.href='kontakt.html';" class="button__footer">Nezávazně poptat</button>
+    </footer>
 
 </body>
 </html>
