--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -22,47 +22,118 @@
                 <p>menu</p>
             </div>
         </label>
-
         <menu>
-            <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
-            <li class="li__active"><a class="a__active" href="reference.html">Reference </a></li>
-            <li><a href="o_nas.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html">DOMŮ</a></li>
+            <li><a href="index.html">SLUŽBY</a></li>
+            <li class="li__active"><a class="a__active" href="reference.html">REFERENCE</a></li>
+            <li><a href="o_nas.html">O NÁS</a></li>
+            <li><a href="kontakt.html">KONTAKT</a></li>
         </menu>
     </nav>
-
 </header>
 <main>
     <article>
     <h1 class="center__text__on__pc nadpis__h1__other__page">Hasičská zbrojnice</h1>
     <p class="center__text__on__pc">Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
     <figure class="article--reference">
-        <img src="Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg">
-        <img src="Media/reference/hasicska-zbrojnice/reference-hz-02.jpeg">
-        <img src="Media/reference/hasicska-zbrojnice/reference-hz-03.jpeg">
-        <img src="Media/reference/hasicska-zbrojnice/reference-hz-04.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-05.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-06.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-07.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-08.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-09.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-10.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-11.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-12.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-14.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-15.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-16.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-17.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-18.jpeg">
-        <img src="Media//reference/hasicska-zbrojnice/reference-hz-last.jpeg">
-    <figure/>
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-01_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg"
+             alt="Hasičská zbrojnice">
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-02_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-02.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-02.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-03_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-03.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-03.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-04_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-04.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-04.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-05_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-05.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-05.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-06_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-06.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-06.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-07_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-07.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-07.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-08_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-08.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-08.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-09_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-09.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-09.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-10_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-10.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-10.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-11_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-11.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-11.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-12_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-12.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-12.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-14_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-14.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-14.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-15_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-15.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-15.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-16_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-16.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-16.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-17_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-17.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-17.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-18_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-18.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-18.jpeg"
+             alt="Hasičská zbrojnice">
+
+        <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-last_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-last.jpeg 1920w"
+             sizes="(max-width: 800px) 100vw, 800px"
+             src="./Media/reference/hasicska-zbrojnice/reference-hz-last.jpeg"
+             alt="Hasičská zbrojnice">
+
+    </figure>
+
     </article>
 </main>
 <footer>
-    <p>Plácneme si na váš projekt</p>
+    <p class="velky_a_tucny">Plácneme si na váš projekt</p>
     <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
-    <button class="button__footer">Nezávazně poptat</button>
+    <button onclick="window.location.href='kontakt.html';" class="button__footer">Nezávazně poptat</button>
 </footer>
 </body>
 </html>
