--- a/reference_venkovsni_plochy.html
+++ b/reference_venkovsni_plochy.html
@@ -22,29 +22,45 @@
                 <p>menu</p>
             </div>
         </label>
-
         <menu>
-            <li><a href="index.html"“>Domů</a></li>
-            <li class="li__active"><a class="a__active" href="reference.html">Reference </a></li>
-            <li><a href="o_nas.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html">DOMŮ</a></li>
+            <li><a href="index.html">SLUŽBY</a></li>
+            <li class="li__active"><a class="a__active" href="reference.html">REFERENCE</a></li>
+            <li><a href="o_nas.html">O NÁS</a></li>
+            <li><a href="kontakt.html">KONTAKT</a></li>
         </menu>
     </nav>
 </header>
-<figure class="article__title">
+<article>
     <h1 class="center__text__on__pc nadpis__h1__other__page">Venkovní plochy Restyl</h1>
     <p class="center__text__on__pc">Provedení venkovních ploch Restyl</p>
-</figure>
 <section class="article--reference">
-    <img src="Media/reference/plochy-restyl/reference-restyl-01.jpeg">
-    <img src="Media/reference/plochy-restyl/reference-restyl-02.jpeg">
-    <img src="Media/reference/plochy-restyl/reference-restyl-03.jpeg">
-    <img src="Media/reference/plochy-restyl/reference-restyl-04.jpeg">
+
+    <img srcset="Media/reference/plochy-restyl/reference-restyl-01_mobil.jpg 560w, Media/reference/plochy-restyl/reference-restyl-01.jpeg 1920w"
+         sizes="(max-width: 800px) 100vw, 800px"
+         src="./Media/reference/plochy-restyl/reference-restyl-01.jpeg"
+         alt="Plochy Restyl">
+
+    <img srcset="Media/reference/plochy-restyl/reference-restyl-02_mobil.jpg 560w, Media/reference/plochy-restyl/reference-restyl-02.jpeg 1920w"
+         sizes="(max-width: 800px) 100vw, 800px"
+         src="./Media/reference/plochy-restyl/reference-restyl-02.jpeg"
+         alt="Plochy Restyl">
+
+    <img srcset="Media/reference/plochy-restyl/reference-restyl-03_mobil.jpg 560w, Media/reference/plochy-restyl/reference-restyl-03.jpeg 1920w"
+         sizes="(max-width: 800px) 100vw, 800px"
+         src="./Media/reference/plochy-restyl/reference-restyl-03.jpeg"
+         alt="Plochy Restyl">
+
+    <img srcset="Media/reference/plochy-restyl/reference-restyl-04_mobil.jpg 560w, Media/reference/plochy-restyl/reference-restyl-04.jpeg 1920w"
+         sizes="(max-width: 800px) 100vw, 800px"
+         src="./Media/reference/plochy-restyl/reference-restyl-04.jpeg"
+         alt="Plochy Restyl">
 </section>
+</article>
 <footer>
-    <p>Plácneme si na váš projekt</p>
+    <p class="velky_a_tucny">Plácneme si na váš projekt</p>
     <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
-    <button class="button__footer">Nezávazně poptat</button>
+    <button onclick="window.location.href='kontakt.html';" class="button__footer">Nezávazně poptat</button>
 </footer>
 
 </body>
