--- a/kontakt.html
+++ b/kontakt.html
@@ -22,22 +22,21 @@
                 <p>menu</p>
             </div>
         </label>
-
         <menu>
-            <li><a href="index.html">Domů</a></li>
-            <li><a href="index.html">Služby</a></li>
-            <li><a href="reference.html">Reference </a></li>
-            <li><a href="o_nas.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html">DOMŮ</a></li>
+            <li><a href="index.html">SLUŽBY</a></li>
+            <li><a href="reference.html">REFERENCE</a></li>
+            <li><a href="o_nas.html">O NÁS</a></li>
+            <li class="li__active"><a class="a__active" href="kontakt.html">KONTAKT</a></li>
         </menu>
     </nav>
-
-
 </header>
 
 <main>
-        <h1 class="center__text__on__pc nadpis__h1__other__page">Kontakt</h1>
+    <article>
+    <h1 class="center__text__on__pc nadpis__h1__other__page">Kontakt</h1>
     <p class="center__text__on__pc max__text__align">Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+    </article>
     <article class="kontakt__grid">
         <div class="contact__icons">
             <a href="tel:+420775550564" class="contacts__description"><span class="icon-dot icon-dot--phone"></span>+420 775 550 564</a>
