--- a/reference.html
+++ b/reference.html
@@ -26,16 +26,14 @@
                 <p>menu</p>
             </div>
         </label>
-
         <menu>
-            <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
-            <li class="li__active"><a  class= "a__active"href="reference.html">Reference </a></li>
-            <li><a href="o_nas.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="index.html">DOMŮ</a></li>
+            <li><a href="index.html">SLUŽBY</a></li>
+            <li class="li__active"><a class="a__active" href="reference.html">REFERENCE</a></li>
+            <li><a href="o_nas.html">O NÁS</a></li>
+            <li><a href="kontakt.html">KONTAKT</a></li>
         </menu>
     </nav>
-
 </header>
 <main>
     <section class="section__reference">
@@ -88,9 +86,9 @@
 
 </main>
 <footer>
-    <p>Plácneme si na váš projekt</p>
+    <p class="velky_a_tucny">Plácneme si na váš projekt</p>
     <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
-    <button class="button__footer">Nezávazně poptat</button>
+    <button onclick="window.location.href='kontakt.html';" class="button__footer">Nezávazně poptat</button>
 </footer>
 </body>
 </html>
