změna je život, ale ne v githubu

--- a/sluzba_komunikace.html
+++ b/sluzba_komunikace.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Služba komunikace</title>
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
     <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
     <meta name="author" content="Jan Sebastián Kostlán">
