--- a/kontakt.html
+++ b/kontakt.html
@@ -2,11 +2,15 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Kontakt</title>
+    <meta name="description" content="Kontakt na mě, který je velmi důležitý">
+    <meta name="author" content="Jan Sebastián Kostlán">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/computer.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
 <header class="header__next__page">
