--- a/reference.html
+++ b/reference.html
@@ -2,15 +2,15 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
-    <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
+    <title>Reference</title>
+    <meta name="description" content="Ude máme seznam referencí">
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/computer.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
 <header class="header__next__page">
@@ -50,7 +50,8 @@
                          alt="prádelna">
                 </div>
                 <a href="reference_hasicska_zbrojnice.html" class="overlay">
-                    <h3>Hasičská zbrojnice</h3>
+
+                    <p class="velky_a_tucny">Hasičská zbrojnice</p>
                     <p>Celková rekonstrukce</p>
                 </a>
 
@@ -64,7 +65,7 @@
                          alt="prádelna">
                 </div>
                 <a href="reference_samoobluzna_prace.html" class="overlay">
-                    <h3>Samoobslužná prádelna</h3>
+                    <p class="velky_a_tucny">Samoobslužná prádelná</p>
                     <p>Celková rekonstrukce</p>
                 </a>
             </article>
@@ -77,7 +78,7 @@
                          alt="plochy">
                 </div>
                 <a href="reference_venkovsni_plochy.html" class="overlay">
-                    <h3>Venkovní plochy restyl</h3>
+                    <p class="velky_a_tucny">Venkovní plochy restyl</p>
                     <p>Celková rekonstrukce</p>
                 </a>
             </article>
