Dal bych si vesmírnou tatranku

--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <head>
         <title>404 Error</title>
         <meta charset="UTF-8">
         <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
@@ -11,7 +10,7 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" type="image/x-icon" href="Media/logo.png">
         <link rel="stylesheet" href="styles/navbar.css">
-        <link rel="stylesheet" href="styles/computer.css">
+        <link rel="stylesheet" href="styles/other_device.css">
 </head>
 <body>
 <header class="header__next__page">
@@ -40,7 +39,7 @@
 
 </header>
 <article>
-<p class="nadpis__h1__other__page">404 Error</p>
+<h1 class="nadpis__h1__other__page">404 Error</h1>
 <p>Náš server nic nenašel. Zkus to znova a lépe</p>
 <button onclick="window.location.href='index.html';" class="button__normal">Hlavní stránka</button>
 </article>
