--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
         <link rel="stylesheet" href="styles/navbar.css">
-        <link rel="stylesheet" href="styles/computer.css">
+        <link rel="stylesheet" href="styles/other_device.css">
     </head>
 
     <body>
@@ -45,7 +45,7 @@
         <section id="sluzby">
         <article class="article__max__width">
             <p class="velky_a_tucny center__text__on__pc">Využíjte škálu našich <span class="span__orange">služeb</span></p>
-            <p class="center__text__on__pc max__text__align">Ačkoliv provádíme především <b>průmyslové stavby</b>, není pro nás problém postavit Vám <b>rodinný domek na klíč</b>, nebo jen hrubou stavbu. Nejsou nám cizí ani <b>rekonstrukce budov</b> a jejich údržba a to včetně okolních ploch.</p>
+            <p class="center__text__on__pc max__text__align">Ačkoliv provádíme především <strong>průmyslové stavby</strong>, není pro nás problém postavit Vám <strong>rodinný domek na klíč</strong>, nebo jen hrubou stavbu. Nejsou nám cizí ani <strong>rekonstrukce budov</strong> a jejich údržba a to včetně okolních ploch.</p>
         </article>
 
 
@@ -61,7 +61,7 @@
             </aside>
             <div class="hlavni_obsah">
             <h2>Novostavby</h2>
-            <p>Dle požadavků investora jsme schopní dodat <b>kompletní stavbu na klíč</b>, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.</p>
+            <p>Dle požadavků investora jsme schopní dodat <strong>kompletní stavbu na klíč</strong>, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.</p>
             <p> Provádíme stavby jak průmysloého typu, tak rodinné stavby.</p>
                 <button onclick="window.location.href='sluzba_novostavby.html';" class="button__outline">Zobrazit více</button>
             </div>
@@ -77,7 +77,7 @@
             </aside>
             <div class="hlavni_obsah">
                 <h2>Průmyslové stavby</h2>
-                <p>Realizujeme <b>průmyslové objekty ocelové konstrukce</b>, lehké ocelové (stanového typu), z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se <b>dostáváme na přijatelné ceny</b>.</p>
+                <p>Realizujeme <strong>průmyslové objekty ocelové konstrukce</strong>, lehké ocelové (stanového typu), z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se <strong>dostáváme na přijatelné ceny</strong>.</p>
                  <button onclick="window.location.href='sluzba_prumyslove_stavby.html';" class="button__outline">Zobrazit více</button>
             </div>
 
@@ -94,7 +94,7 @@
             </aside>
             <div class="hlavni_obsah">
             <h2>Rekonstrukce domů a jiných staveb</h2>
-            <p>Provádíme veškeré práce spojené s <b>rekonstrukcí stávajících objektů</b>. Pro naše klienty zajišťujeme dodatečné izolování objektů, <b>zateplení objektů</b>, změnu vnitřních i vnějších dispozic stávajících objektů a demolice stávajících staveb.</p>
+            <p>Provádíme veškeré práce spojené s <strong>rekonstrukcí stávajících objektů</strong>. Pro naše klienty zajišťujeme dodatečné izolování objektů, <strong>zateplení objektů</strong>, změnu vnitřních i vnějších dispozic stávajících objektů a demolice stávajících staveb.</p>
                 <button onclick="window.location.href='sluzba_rekonstrukce.html';" class="button__outline">Zobrazit více</button>
                 </div>
 
@@ -109,7 +109,7 @@
             </aside>
             <div class="hlavni_obsah">
                 <h2>Komunikace a zpevnění plochy</h2>
-                <p>Komunikace a zpevněné plochy provádíme včetně <b>zemních prací, konstrukcí podkladních</b> a souvisejících objektů, jako jsou <b>odvodnění, zpevnění svahů, opěrné zdi</b> atd.</p>
+                <p>Komunikace a zpevněné plochy provádíme včetně <strong>zemních prací, konstrukcí podkladních</strong> a souvisejících objektů, jako jsou <strong>odvodnění, zpevnění svahů, opěrné zdi</strong> atd.</p>
                 <button onclick="window.location.href='sluzba_komunikace.html';" class="button__outline">Zobrazit více</button>
             </div>
 
@@ -132,7 +132,7 @@
 
             <article class="article__max__width">
                 <p class="velky_a_tucny center__text__on__pc">Rádi vám ukážeme naše <span class="span__orange">reference</span></p>
-                <p class="center__text__on__pc">Stojí za námi <b>kvalitně vyhotovené zakázky</b> dle konkrétních požadavků zadavatelů <b>podepřené letitými zkušenostmi ve stavebnictví</b>. To, že <b>obrátit se na právě nás je vhodná volba potvrdí naši klienti</b>, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
+                <p class="center__text__on__pc">Stojí za námi <strong>kvalitně vyhotovené zakázky</strong> dle konkrétních požadavků zadavatelů <strong>podepřené letitými zkušenostmi ve stavebnictví</strong>. To, že <strong>obrátit se na právě nás je vhodná volba potvrdí naši klienti</strong>, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
             </article>
 
             <div class="obrazky__reference">
