--- a/kontakt.html
+++ b/kontakt.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/other_device.css">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
@@ -64,12 +64,13 @@
         <input type="text" id="telefon" name="fname">
         <label for="category">Kategorie:</label>
         <select id="category" name="category">
-            <option value="gulag">Psychologie</option>
-            <option value="Ozzy je powerlifter">Ozzy</option>
-            <option value="Kryčfalušij">Hanička Zagorova</option>
+            <option value="gulag">Novostavba</option>
+            <option value="Ozzy je powerlifter">Komunikace</option>
+            <option value="Kryčfalušij">Průmyslové stavby</option>
+            <option value="Kryčfalušij">Rekonstrukce</option>
         </select>
         <label>
-            <textarea  name="message" rows="10" cols="30">Preferuji brunety oproti blondýnám</textarea>
+            <textarea  name="message" rows="10" cols="30">Dobrý den, mám zájem o ...</textarea>
         </label>
         <input class="button" type="submit" value="Odeslat nezávaznou poptávku">
     </form>
