--- a/o_nas.html
+++ b/o_nas.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/other_device.css">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
@@ -40,19 +40,19 @@
     <section>
     <article>
         <h1 class="center__text__on__pc nadpis__h1__other__page">O nás</h1>
-        <p>Společnost <b>HM Building.cz s.r.o.</b> nabízí své <b>služby ve stavebnictví od roku 2015</b>, a to převážně po Libereckém kraji. </p>
-    <p> V oboru pozemního stavitelství <b>provádíme stavbu a rekonstrukci:</b></p>
+        <p>Společnost <strong>HM Building.cz s.r.o.</strong> nabízí své <strong>služby ve stavebnictví od roku 2015</strong>, a to převážně po Libereckém kraji. </p>
+    <p> V oboru pozemního stavitelství <strong>provádíme stavbu a rekonstrukci:</strong></p>
     <ul class="odrazky__oranzove">
         <li>Průmyslových staveb</li>
         <li>obytných staveb</li>
         <li>staveb občanské vybavenosti</li>
         <li>komunikaci vozidlovýých, ale i pěších</li>
     </ul>
-    <p>Zakázky můžeme řešit tzv. <b>na klíč</b>, kde jsme schopni zajistit dodávky a montáž elektro-instalace NN a VN, zdravotně – technické instalace, ústředního vytápění, vzduchotechniky, MaR, případně jsme schopni, po dohodě s investorem, dodat pouze některou ucelenou část celkové zakázky.</p>
+    <p>Zakázky můžeme řešit tzv. <strong>na klíč</strong>, kde jsme schopni zajistit dodávky a montáž elektro-instalace NN a VN, zdravotně – technické instalace, ústředního vytápění, vzduchotechniky, MaR, případně jsme schopni, po dohodě s investorem, dodat pouze některou ucelenou část celkové zakázky.</p>
 
-        <p>Naše firma taktéž zajišťuje <b>projekční služby a služby týkající se statického posouzení staveb</b> v oboru pozemního stavitelství a dále jsme schopni zajistit <b>investorsko–inženýrské služby</b>.</p>
+        <p>Naše firma taktéž zajišťuje <strong>projekční služby a služby týkající se statického posouzení staveb</strong> v oboru pozemního stavitelství a dále jsme schopni zajistit <strong>investorsko–inženýrské služby</strong>.</p>
 
-        <p><b>Záruční doba</b> na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
+        <p><strong>Záruční doba</strong> na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
     </article>
     </section>
 </main>
