--- a/reference.html
+++ b/reference.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/other_device.css">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
@@ -39,7 +39,7 @@
     <section class="section__reference">
         <article>
         <h1 class="center__text__on__pc nadpis__h1__other__page">Reference</h1>
-        <p class="center__text__on__pc max__text__align">Stojí za námi <b>kvalitně vyhotovené zakázky</b> dle konkrétních požadavků zadavatelů <b>podepřené letitými zkušenostmi ve stavebnictví</b>. To, že <b>obrátit se na právě nás je vhodná volba potvrdí naši klienti</b>, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
+        <p class="center__text__on__pc max__text__align">Stojí za námi <strong>kvalitně vyhotovené zakázky</strong> dle konkrétních požadavků zadavatelů <strong>podepřené letitými zkušenostmi ve stavebnictví</strong>. To, že <strong>obrátit se na právě nás je vhodná volba potvrdí naši klienti</strong>, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
             </article>
         <div class="obrazky__reference">
             <article class="centrovani__textu article__reference">
