--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/other_device.css">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
@@ -113,6 +113,7 @@
         <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-16_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-16.jpeg 1920w"
              sizes="(max-width: 800px) 100vw, 800px"
              src="./Media/reference/hasicska-zbrojnice/reference-hz-16.jpeg"
+             class="image__9"
              alt="Hasičská zbrojnice">
 
         <img srcset="Media/reference/hasicska-zbrojnice/reference-hz-17_mobil.jpg 560w, Media/reference/hasicska-zbrojnice/reference-hz-17.jpeg 1920w"
