--- a/sluzba_komunikace.html
+++ b/sluzba_komunikace.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
     <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
+    <link rel="stylesheet" href="styles/other_device.css">
 </head>
 <body>
 <header class="header__next__page">
@@ -39,14 +39,14 @@
     <section>
     <article>
         <h1>Komunikace a zpevněné plochy</h1>
-        <p>Komunikace a zpevněné plochy provádíme <b>včetně zemních prací, konstrukcí podkladních</b> a souvisejících objektů, jako jsou <b>odvodnění, zpevnění svahů, opěrné zdi </b>atd.</p>
-        <b>Kryt komunikace</b>
+        <p>Komunikace a zpevněné plochy provádíme <strong>včetně zemních prací, konstrukcí podkladních</strong> a souvisejících objektů, jako jsou <strong>odvodnění, zpevnění svahů, opěrné zdi </strong>atd.</p>
+        <p><strong>Kryt komunikace</strong></p>
         <ul class="odrazky__oranzove">
             <li>živočisných</li>
             <li>betonový</li>
             <li>dlážděný (kámen, betonová dlažba...)</li>
         </ul>
-        <p>Při realizaci jakékoliv zpevněné plochy <b>dokážeme navrhnout celkovou skladbu konstrukce</b>, s ohledem na její způsob použití a umístění.</p>
+        <p>Při realizaci jakékoliv zpevněné plochy <strong>dokážeme navrhnout celkovou skladbu konstrukce</strong>, s ohledem na její způsob použití a umístění.</p>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
             <li>podklady pod komunikace</li>
