--- a/sluzba_novostavby.html
+++ b/sluzba_novostavby.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/other_device.css">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
@@ -39,7 +39,7 @@
     <section>
     <article>
         <h1 class="center__text__on__pc nadpis__h1__other__page">Novostavby</h1>
-        <p>Dle požadavků investora jsme schopní dodat <b>kompletní stavbu na klíč</b>, případně zhotovit ucelenou část. Jsme schopni zajistit také <b>projektovou dokumentaci</b>. Provádíme <b>stavby jak průmyslového typu</b>, tak <b>rodinné stavby</b>. Stavba je prováděna dle projektové dokumentace dodané investorem
+        <p>Dle požadavků investora jsme schopní dodat <strong>kompletní stavbu na klíč</strong>, případně zhotovit ucelenou část. Jsme schopni zajistit také <strong>projektovou dokumentaci</strong>. Provádíme <strong>stavby jak průmyslového typu</strong>, tak <strong>rodinné stavby</strong>. Stavba je prováděna dle projektové dokumentace dodané investorem
             a v rozsahu dle smlouvy o dílo, která obsahuje jasně definované ceny dle položkového rozpočtu.</p>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
