--- a/sluzba_rekonstrukce.html
+++ b/sluzba_rekonstrukce.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="Media/logo.png">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/computer.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/other_device.css">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
 </head>
 <body>
@@ -40,23 +40,23 @@
     <article>
         <h1>Rekonstrukce domů</h1>
         <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů.</p>
-        <b>Dodatečné izolování objektů</b>
+        <strong>Dodatečné izolování objektů</strong>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
             <li>základové konstrukce</li>
         </ul>
-        <b>Zateplení objektů</b>
+        <strong>Zateplení objektů</strong>
         <ul class="odrazky__oranzove">
             <li>zatelení fasád</li>
             <li>výměna oken a otvorových výplní</li>
         </ul>
-        <b>Změna vnitřních i vnějších dispozic stávajících objektů</b>
+        <strong>Změna vnitřních i vnějších dispozic stávajících objektů</strong>
         <ul class="odrazky__oranzove">
             <li>bourací práce</li>
             <li>zednické práce</li>
             <li>sádrokartonářské práce</li>
         </ul>
-        <b>Demolice stávajících objektů</b>
+        <p><strong>Demolice stávajících objektů</strong></p>
         <ul class="odrazky__oranzove">
             <li>bourací a demoliční práce</li>
             <li>Odizolování konstrukcí pod/nad úrovní terénu</li>
